--- a/Christian-Louis-Bolea/index.html
+++ b/Christian-Louis-Bolea/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style src="style-index.css"></style>
+    <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
