--- a/Christian-Louis-Bolea/consoles.html
+++ b/Christian-Louis-Bolea/consoles.html
@@ -23,9 +23,51 @@
     </header>
     <div class="carousel">
         <div class="list">
-
+            <div class="item" data-color="#301934" data-sound="sounds/ps1-sound.mp3" data-theme="dark">
+                <img src="Assets/resize/ps1.png">
+                <div class="introduce">
+                    <div class="title">Playstation</div>
+                    <div class="topic">PS3</div>
+                    <div class="des">
+                       PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                        </div>
+                    <button class="seeMore">View specifications &#8599</button>
+                </div>
+                <div class="detail">
+                    <div class="title">PLAYSTATION 3</div>
+                    <div class="des">
+                        PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                    </div>
+                    <div class="specifications">
+                        <div>
+                            <p>CPU</p>
+                            <p>3.2 GHz Cell Broadband Engine processor</p>
+                        </div>
+                        <div>
+                            <p>GPU</p>
+                            <p>NVIDIA RSX GPU</p>
+                        </div>
+                        <div>
+                            <p>MEMORY</p>
+                            <p>256 MB of XDR main RAM and 256 MB of GDDR3 VRAM</p>
+                        </div>
+                        <div>
+                            <p>STORAGE</p>
+                            <p>Storage varient ranging from 20 GB to 500 GB</p>
+                        </div>
+                        <div>
+                            <p>OPTICAL DRIVE</p>
+                            <p>Blu-ray disc</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
             <div class="item" data-color="#202020" data-sound="sounds/ps2-sound.mp3" data-theme="dark">
-                <img src="Assets/ps2.png">
+                <img src="Assets/resize/ps2.png">
                 <div class="introduce">
                     <div class="title">Playstation</div>
                     <div class="topic">PS2</div>
@@ -68,16 +110,101 @@
                     </div>
                 </div>
             </div>
-            <div class="item" data-color="#202020" data-sound="sounds/ps3-sound.mp3" data-theme="dark">
-                <img src="Assets/ps3 phat.png">
+            <div class="item" data-color="#301934" data-sound="sounds/ps3-sound.mp3" data-theme="dark">
+                <img src="Assets/resize/ps3.png">
                 <div class="introduce">
                     <div class="title">Playstation</div>
                     <div class="topic">PS3</div>
                     <div class="des">
-                       
-                        Playstation 3 is a home video game console developed and marketed by Sony Computer Entertainment. It was first released on March 4, 2000, in Japan, followed by North America on October 26, 2000, and Europe on November 24, 2000. As the successor to the original PlayStation, the PS2 became the second installment in the PlayStation console series.
+                       PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                        </div>
+                    <button class="seeMore">View specifications &#8599</button>
+                </div>
+                <div class="detail">
+                    <div class="title">PLAYSTATION 3</div>
+                    <div class="des">
+                        PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
                     </div>
-                    <button class="seeMore">View More Detail</button>
+                    <div class="specifications">
+                        <div>
+                            <p>CPU</p>
+                            <p>3.2 GHz Cell Broadband Engine processor</p>
+                        </div>
+                        <div>
+                            <p>GPU</p>
+                            <p>NVIDIA RSX GPU</p>
+                        </div>
+                        <div>
+                            <p>MEMORY</p>
+                            <p>256 MB of XDR main RAM and 256 MB of GDDR3 VRAM</p>
+                        </div>
+                        <div>
+                            <p>STORAGE</p>
+                            <p>Storage varient ranging from 20 GB to 500 GB</p>
+                        </div>
+                        <div>
+                            <p>OPTICAL DRIVE</p>
+                            <p>Blu-ray disc</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item" data-color="#301934" data-sound="sounds/ps4-sound.mp3" data-theme="dark">
+                <img src="Assets/resize/ps4.png">
+                <div class="introduce">
+                    <div class="title">Playstation</div>
+                    <div class="topic">PS3</div>
+                    <div class="des">
+                       PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                        </div>
+                    <button class="seeMore">View specifications &#8599</button>
+                </div>
+                <div class="detail">
+                    <div class="title">PLAYSTATION 3</div>
+                    <div class="des">
+                        PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                    </div>
+                    <div class="specifications">
+                        <div>
+                            <p>CPU</p>
+                            <p>3.2 GHz Cell Broadband Engine processor</p>
+                        </div>
+                        <div>
+                            <p>GPU</p>
+                            <p>NVIDIA RSX GPU</p>
+                        </div>
+                        <div>
+                            <p>MEMORY</p>
+                            <p>256 MB of XDR main RAM and 256 MB of GDDR3 VRAM</p>
+                        </div>
+                        <div>
+                            <p>STORAGE</p>
+                            <p>Storage varient ranging from 20 GB to 500 GB</p>
+                        </div>
+                        <div>
+                            <p>OPTICAL DRIVE</p>
+                            <p>Blu-ray disc</p>
+                        </div>
+                    </div>
+                    <div class="checkout">
+                        <button>ADD TO CART</button>
+                        <button>CHECKOUT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item" data-color="#301934" data-sound="sounds/ps5-sound.mp3" data-theme="dark">
+                <img src="Assets/resize/ps5.png">
+                <div class="introduce">
+                    <div class="title">Playstation</div>
+                    <div class="topic">PS3</div>
+                    <div class="des">
+                       PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                        </div>
+                    <button class="seeMore">View specifications &#8599</button>
                 </div>
                 <div class="detail">
                     <div class="title">PLAYSTATION 3</div>
