--- a/Christian-Louis-Bolea/consoles.html
+++ b/Christian-Louis-Bolea/consoles.html
@@ -23,7 +23,7 @@
     </header>
     <div class="carousel">
         <div class="list">
-            <div class="item" data-color="#301934" data-sound="sounds/ps1-sound.mp3" data-theme="dark">
+            <div class="item" data-color="#E0E0E0" data-sound="sounds/ps1-sound.mp3" data-theme="dark">
                 <img src="Assets/resize/ps1.png">
                 <div class="introduce">
                     <div class="title">Playstation</div>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" data-color="#301934" data-sound="sounds/ps4-sound.mp3" data-theme="dark">
+            <div class="item" data-color="linear-gradient(45deg, #0070D1, #5B0E91)" data-sound="sounds/ps4-sound.mp3" data-theme="dark">
                 <img src="Assets/resize/ps4.png">
                 <div class="introduce">
                     <div class="title">Playstation</div>
@@ -196,7 +196,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" data-color="#301934" data-sound="sounds/ps5-sound.mp3" data-theme="dark">
+            <div class="item" data-color="linear-gradient(45deg, #0F0F2A, #0070D1)" data-sound="sounds/ps5-sound.mp3" data-theme="dark">
                 <img src="Assets/resize/ps5.png">
                 <div class="introduce">
                     <div class="title">Playstation</div>
