some changes added

--- a/Christian-Louis-Bolea/consoles.html
+++ b/Christian-Louis-Bolea/consoles.html
@@ -27,37 +27,37 @@
                 <img src="Assets/resize/ps1.png">
                 <div class="introduce">
                     <div class="title">Playstation</div>
-                    <div class="topic">PS3</div>
+                    <div class="topic">PS1</div>
                     <div class="des">
-                       PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                       The original PlayStation, released in 1994, revolutionized the industry by popularizing 3D graphics and CD-based gaming, moving away from cartridges. It introduced iconic franchises like Metal Gear Solid, Final Fantasy VII, and Crash Bandicoot.
                         </div>
                     <button class="seeMore">View specifications &#8599</button>
                 </div>
                 <div class="detail">
-                    <div class="title">PLAYSTATION 3</div>
+                    <div class="title">PLAYSTATION 1</div>
                     <div class="des">
-                        PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                        The original PlayStation, released in 1994, revolutionized the industry by popularizing 3D graphics and CD-based gaming, moving away from cartridges. It introduced iconic franchises like Metal Gear Solid, Final Fantasy VII, and Crash Bandicoot.
                     </div>
                     <div class="specifications">
                         <div>
                             <p>CPU</p>
-                            <p>3.2 GHz Cell Broadband Engine processor</p>
+                            <p>32-bit R3000 @ 33.87 MHz</p>
                         </div>
                         <div>
                             <p>GPU</p>
-                            <p>NVIDIA RSX GPU</p>
+                            <p>32-bit Sony GPU</p>
                         </div>
                         <div>
                             <p>MEMORY</p>
-                            <p>256 MB of XDR main RAM and 256 MB of GDDR3 VRAM</p>
+                            <p>2 MB RAM and 1 MB VRAM</p>
                         </div>
                         <div>
                             <p>STORAGE</p>
-                            <p>Storage varient ranging from 20 GB to 500 GB</p>
+                            <p>128 KB Memory Card</p>
                         </div>
                         <div>
                             <p>OPTICAL DRIVE</p>
-                            <p>Blu-ray disc</p>
+                            <p>2x CD-ROM Drive</p>
                         </div>
                     </div>
                     <div class="checkout">
@@ -132,7 +132,7 @@
                         </div>
                         <div>
                             <p>GPU</p>
-                            <p>NVIDIA RSX GPU</p>
+                            <p>NVIDIA RSX GPU @ 500-550 MHz</p>
                         </div>
                         <div>
                             <p>MEMORY</p>
@@ -157,37 +157,37 @@
                 <img src="Assets/resize/ps4.png">
                 <div class="introduce">
                     <div class="title">Playstation</div>
-                    <div class="topic">PS3</div>
+                    <div class="topic">PS4</div>
                     <div class="des">
-                       PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                       Released in 2013, the PS4 focused on a more developer-friendly, PC-like architecture. It dominated its generation with a strong emphasis on social features, like the "Share" button on its new DualShock 4 controller, and a vast library of critically acclaimed exclusive games.
                         </div>
                     <button class="seeMore">View specifications &#8599</button>
                 </div>
                 <div class="detail">
-                    <div class="title">PLAYSTATION 3</div>
+                    <div class="title">PLAYSTATION 4</div>
                     <div class="des">
-                        PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                       Released in 2013, the PS4 focused on a more developer-friendly, PC-like architecture. It dominated its generation with a strong emphasis on social features, like the "Share" button on its new DualShock 4 controller, and a vast library of critically acclaimed exclusive games.
                     </div>
                     <div class="specifications">
                         <div>
                             <p>CPU</p>
-                            <p>3.2 GHz Cell Broadband Engine processor</p>
+                            <p>8-core x86-64 AMD "Jaguar"</p>
                         </div>
                         <div>
                             <p>GPU</p>
-                            <p>NVIDIA RSX GPU</p>
+                            <p>AMD Radeon-based (1.84 TFLOPS)</p>
                         </div>
                         <div>
                             <p>MEMORY</p>
-                            <p>256 MB of XDR main RAM and 256 MB of GDDR3 VRAM</p>
+                            <p>8 GB GDDR5 (unified)</p>
                         </div>
                         <div>
                             <p>STORAGE</p>
-                            <p>Storage varient ranging from 20 GB to 500 GB</p>
+                            <p>500 GB or 1 TB Hard Drive (user-replaceable)</p>
                         </div>
                         <div>
                             <p>OPTICAL DRIVE</p>
-                            <p>Blu-ray disc</p>
+                            <p>Blu-ray Disc Drive (read-only)</p>
                         </div>
                     </div>
                     <div class="checkout">
@@ -200,37 +200,37 @@
                 <img src="Assets/resize/ps5.png">
                 <div class="introduce">
                     <div class="title">Playstation</div>
-                    <div class="topic">PS3</div>
+                    <div class="topic">PS5</div>
                     <div class="des">
-                       PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                       The latest generation, launched in 2020, is built around speed and immersion. Its custom SSD virtually eliminates loading times, while the new DualSense controller provides advanced haptic feedback and adaptive triggers. It fully embraces 4K gaming and ray tracing.
                         </div>
                     <button class="seeMore">View specifications &#8599</button>
                 </div>
                 <div class="detail">
-                    <div class="title">PLAYSTATION 3</div>
+                    <div class="title">PLAYSTATION 5</div>
                     <div class="des">
-                        PlayStation 3 built upon the success of its predecessor, the PlayStation 2, and introduced several new features and advancements. It featured a more powerful Cell Broadband Engine CPU, a dedicated RSX 'Reality Synthesizer' GPU developed in collaboration with NVIDIA, and support for high-definition graphics up to 1080p. The console also introduced the Blu-ray Disc format as its primary storage medium, allowing for larger game sizes and enhanced multimedia capabilities.
+                        The latest generation, launched in 2020, is built around speed and immersion. Its custom SSD virtually eliminates loading times, while the new DualSense controller provides advanced haptic feedback and adaptive triggers. It fully embraces 4K gaming and ray tracing.
                     </div>
                     <div class="specifications">
                         <div>
                             <p>CPU</p>
-                            <p>3.2 GHz Cell Broadband Engine processor</p>
+                            <p>8-core AMD Zen 2 @ 3.5 GHz (variable frequency)</p>
                         </div>
                         <div>
                             <p>GPU</p>
-                            <p>NVIDIA RSX GPU</p>
+                            <p>Custom AMD RDNA 2 (10.28 TFLOPS, 36 CUs @ 2.23 GHz)</p>
                         </div>
                         <div>
                             <p>MEMORY</p>
-                            <p>256 MB of XDR main RAM and 256 MB of GDDR3 VRAM</p>
+                            <p>16 GB GDDR6 (unified)</p>
                         </div>
                         <div>
                             <p>STORAGE</p>
-                            <p>Storage varient ranging from 20 GB to 500 GB</p>
+                            <p>Custom 825 GB NVMe SSD</p>
                         </div>
                         <div>
                             <p>OPTICAL DRIVE</p>
-                            <p>Blu-ray disc</p>
+                            <p>4K UHD Blu-ray Drive (This drive is absent in the PS5 Digital Edition)</p>
                         </div>
                     </div>
                     <div class="checkout">
